# prism-ytdlp-plugin

./: .gitignore  CMakeLists.txt  README.md
include/: prism_ytdlp_plugin.h
src/: ytdlp_plugin.c  ytdlp_resolver.c
test/: test_urls.h  ytdlp_resolver_tests.c
